首頁切版、縣市選擇

--- a/week1_project/src/assets/scss/style.scss
+++ b/week1_project/src/assets/scss/style.scss
@@ -3,4 +3,9 @@
 @import "~bootstrap/scss/bootstrap"; /*bootstrap 主套件*/
 
 @import "./variables";
-
+@import "./base";
+@import "./nav";
+@import "./searchbar";
+@import "./popularCities";
+@import "./PopularActivities";
+@import "./PopularFoods";
