--- a/week1_project/src/assets/scss/_PopularFoods.scss
+++ b/week1_project/src/assets/scss/_PopularFoods.scss
@@ -11,10 +11,16 @@
 }
 
 .food_img_size {
-  width: 182px;
-  height: 137px;
+  width: 155px;
+  height: 120px;
+  overflow: hidden;
+  position: relative;
   .food_img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
