--- a/week1_project/src/assets/scss/_popularCities.scss
+++ b/week1_project/src/assets/scss/_popularCities.scss
@@ -1,25 +1,55 @@
-.second_title {
-  font-size: 20px;
-  font-family: Noto Sans TC;
-  font-style: normal;
-  font-weight: normal;
-  margin: 0;
-}
+.photo_container {
+  max-width: 1065px;
+  display: grid;
+  grid-row-gap: 13px;
+  grid-column-gap: 12px;
 
-.title_icon_size {
-  width: 20px;
-  height: 16.19px;
-  .title_icon {
-    width: 100%;
-    height: 100%;
+  .item {
+    font-size: 4em;
+    text-align: center;
+    border: 1px solid #e5e4e9;
+    background-color: #FFF;
+  }
+  
+  .item-1{
+    background-color: #ef342a;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  
+  .item-2 {
+    background-color: #f68f26;
+  }
+  
+  .item-3 {
+    background-color: #4ba946;
+  }
+  
+  .item-4 {
+    background-color: #0376c2;
+  }
+  
+  .item-5 {
+    background-color: #c077af;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3; 
+  }
+  
+  .item-6 {
+    background-color: #f8d29d;
+  }
+  
+  
+  .item-7 {
+    background-color: #b5a87f;
+    grid-column-start: 5;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3; 
   }
 }
 
-.title_square_icon_size {
-  width: 20px;
-  height: 20px;
-  .title_icon {
-    width: 100%;
-    height: 100%;
-  }
-}
