--- a/week1_project/src/assets/scss/_searchbar.scss
+++ b/week1_project/src/assets/scss/_searchbar.scss
@@ -1,10 +1,7 @@
 .searchbar_bg {
+  width: 1280px;
   height: 536px ;
   background-color: #FFF;
-  position: relative;
-}
-
-.searchbar_bg_shadow {
   position: relative;
 
   &:before, &:after {
@@ -37,6 +34,12 @@
     -ms-transform: rotate(3deg);
     transform: rotate(3deg);
   }
+}
+
+.searchbar_bg_shadow {
+  position: relative;
+
+
 }
 
 .searchbar_img_size {
