--- a/week1_project/src/assets/scss/_popularCities.scss
+++ b/week1_project/src/assets/scss/_popularCities.scss
@@ -1,5 +1,10 @@
+.bg {
+  background-color: #F6F7FB;
+}
+
 .photo_container {
-  max-width: 1065px;
+  width: 1065px;
+  height: 245px;
   display: grid;
   grid-row-gap: 13px;
   grid-column-gap: 12px;
@@ -9,47 +14,110 @@
     text-align: center;
     border: 1px solid #e5e4e9;
     background-color: #FFF;
+    overflow: hidden;
+    // padding-block-start: 100%;
+    position: relative;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
   
   .item-1{
-    background-color: #ef342a;
+    background-color: #FFF;
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 3;
   }
   
-  .item-2 {
-    background-color: #f68f26;
+  .item > .photo {
+    height: 100%;
+    left: 0;
+    object-fit: cover;
+    padding: 0.25em;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    
   }
+
+  .item > .map {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25px;
+  }
+
+  .item > p {
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: #FFF
+  }
+  // .item-2 {
+  //   background-color: #FFF;
+  // }
   
-  .item-3 {
-    background-color: #4ba946;
-  }
+  // .item-3 {
+  //   background-color: #FFF;
+  // }
   
-  .item-4 {
-    background-color: #0376c2;
-  }
+  // .item-4 {
+  //   background-color: #FFF;
+  // }
   
   .item-5 {
-    background-color: #c077af;
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3; 
   }
   
-  .item-6 {
-    background-color: #f8d29d;
-  }
-  
-  
   .item-7 {
-    background-color: #b5a87f;
     grid-column-start: 5;
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 3; 
+  }
+}
+.arrow_father {
+  position: relative;
+}
+
+.arrow_child1 {
+  position: absolute;
+  top: 50%;
+  left: 102%;
+}
+
+.arrow_child2 {
+  position: absolute;
+  top: 50%;
+  left: -6%;
+}
+
+.arrow_img_size {
+  width: 30px;
+  height: 30px;
+  .arrow_img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.photo_father {
+  width: 100%;
+  height: 245px;
+  position: relative;
+  .photo_child {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
