--- a/week1_project/src/assets/scss/helpers/_variables.scss
+++ b/week1_project/src/assets/scss/helpers/_variables.scss
@@ -64,7 +64,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       #FF1D6C !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
